crates/lykn-cli/src/snapshots/lykn_cli__dist__tests__macro_module_deno_json.snap
---
source: crates/lykn-cli/src/dist.rs
expression: value
---
{
  "exports": "./mod.js",
  "lint": {
    "rules": {
      "exclude": [
        "no-slow-types"
      ]
    }
  },
  "lykn": {
    "kind": "macro-module",
    "macroEntry": "mod.lykn"
  },
  "name": "@lykn/testing",
  "version": "0.5.0"
}
